part3/project/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: psql
      port: 5432
      targetPort: 5432
